k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: #TJRO_APPTAG
  name: #TJRO_APPTAG
  namespace: #NAME_SPACE
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: #TJRO_APPTAG
  template:
    metadata:
      labels:
        app: #TJRO_APPTAG
    spec:
      containers:
        - name: #TJRO_APPTAG
          image: #CONTAINER_IMG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: application-properties
              mountPath: /application.properties
              subPath: application.properties
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /version
              port: 8080
            initialDelaySeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
            periodSeconds: 30
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /version
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 1
            periodSeconds: 30
          resources:
            requests:
              memory: "1Gi"
              cpu: "600m"
            limits:
              memory: "4Gi"
              cpu: "1000m"  
      volumes:
        - name: application-properties
          configMap:
            name: #TJRO_APPTAG

---
apiVersion: v1
kind: Service
metadata:
  name: #TJRO_APPTAG
  namespace: #NAME_SPACE
spec:
  selector:
    app: #TJRO_APPTAG
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
