k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: #TJRO_APPTAG
  namespace: #NAME_SPACE
  annotations:
    nginx.kubernetes.io/ingress.class: nginx
    nginx.kubernetes.io/rewrite-target: /
    nginx.kubernetes.io/add-base-url: "true"
    nginx.kubernetes.io/proxy-connect-timeout: "600"
    nginx.kubernetes.io/proxy-read-timeout: "600"
    nginx.kubernetes.io/proxy-send-timeout: "600"
    nginx.kubernetes.io/send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - host: #TJRO_HOSTNAME
      http:
        paths:
          - path: /
            backend:
              serviceName: #TJRO_APPTAG
              servicePort: 80
